--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,4 @@
-@import "base/variables";
+@import "base/base";
+@import "components/components";
+@import "pages/pages";
 @import "vendor/bootstrap";
-
-body {
-  background:red;
-}
