--- a/src/layouts/footer.twig
+++ b/src/layouts/footer.twig
@@ -102,8 +102,60 @@
 
     </div>
 
-    <!--
-    <div class="footer-bottom"></div>
-    -->
+
+    <div class="footer-bottom">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-9">
+
+                    <ul class="list-unstyled list-inline contact-info">
+                        <li>
+                            <span class="icon-separator">
+                                <i class="fa fa-map-marker contact-icon" aria-hidden="true"></i>
+                            </span>
+                            <span class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                        </li>
+
+                        <li>
+                            <span class="icon-separator">
+                                <i class="fa fa-phone contact-icon" aria-hidden="true"></i>
+                            </span>
+                            +00 (0) 00 00 00000
+                        </li>
+
+                        <li>
+                            <span class="icon-separator">
+                                <i class="fa fa-envelope-o contact-icon" aria-hidden="true"></i>
+                            </span>
+                            support@Lorem.com
+                        </li>
+
+                    </ul>
+
+                </div>
+                <div class="col-3 text-right">
+
+                    <div class="social-links">
+                        <a href="javascript:;">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="javascript:;">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="javascript:;">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                        <a href="javascript:;">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 
 </footer>
