FIX: Phone Image
Negative z-index added to phone image in footer to provide better display

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -160,7 +160,7 @@
 
   .carsifx-mobile-img {
     position: absolute;
-    bottom:-122px;
+    z-index: -1;
   }
 
   .mobile-platform-box.box-gray {
