--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -29,3 +29,15 @@ $mobile-platform-bg:#f8f9fd;
 $base-font-family:'Roboto', sans-serif;
 $base-font-size:16px;
 $base-line-height:1.5px;
+
+/**
+* ----------------------------
+*    Responsive Variables   *
+* ----------------------------
+ */
+
+$x-small:575.98px;
+$small:767.98px;
+$medium:991.98px;
+$large:1199.98px;
+$x-large:1399.98px;
