FIX: Image Overlap
Fixed phone image over footer

--- a/src/index.twig
+++ b/src/index.twig
@@ -436,7 +436,7 @@
 
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <img src="images/carsifx_mobile_xx.png" class="img-fluid carsifx-mobile-img" />
+                <img src="images/Phone.png" class="img-fluid carsifx-mobile-img" />
             </div>
         </div>
     </div>
