--- a/src/styles/components/_register-steps.scss
+++ b/src/styles/components/_register-steps.scss
@@ -1,5 +1,5 @@
 .section-register-steps {
-  margin:50px 0;
+  margin:170px 0;
 
   .steps-container {
 
@@ -69,14 +69,14 @@
         -moz-transform:rotate(45deg); 	/* Firefox */
         -webkit-transform:rotate(45deg); /* Safari & Chrome */
         -o-transform:rotate(45deg); 	/* Opera */
-        border-radius: 10px;
+        border-radius: 20px;
         width:70px;
         height:70px;
         margin:20px auto;
         text-align: center;
         .step-inner {
           padding:10px;
-          border-radius: 10px;
+          border-radius: 13px;
           transform:rotate(0deg);
           -ms-transform:rotate(0deg);
           -moz-transform:rotate(0deg);
@@ -87,13 +87,15 @@
           margin: 12px;
           .step-num {
             color:#fff;
-            font-weight: bold;
+            font-weight: lighter;
+            font-size:25px;
             display: block;
             transform:rotate(-45deg);
             -ms-transform:rotate(-45deg);
             -moz-transform:rotate(-45deg);
             -webkit-transform:rotate(-45deg);
             -o-transform:rotate(-45deg);
+            margin:-5px;
           }
         }
       }
@@ -101,6 +103,12 @@
       .step-title {
         font-weight: bold;
         font-size:14px;
+      }
+
+      .description {
+        width:100%;
+        margin:0 auto;
+        font-size:15px;
       }
 
     }
