ADD/FIX: Footer Logo SVG, Icon Set
- Logo changed to svg version
- Feather font-icons are added

--- a/src/layouts/footer.twig
+++ b/src/layouts/footer.twig
@@ -10,7 +10,7 @@
 
                          <div class="footer-block img-block align-self-center">
                              <a href="javascript:;">
-                                 <img src="images/carsi_footer_logo.png" class="img-fluid" alt="Çarşı FX Logo"/>
+                                 <img src="images/carsi_footer_logo.svg" class="img-fluid" alt="Çarşı FX Logo"/>
                              </a>
                          </div>
 
@@ -159,3 +159,8 @@
 
 
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+<script>
+    feather.replace();
+</script>
