--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -8,7 +8,7 @@ header {
       color:$header-nav-color;
       font-family: $base-font-family;
       font-size:$base-font-size;
-      font-weight: 600;
+      font-weight: normal;
       display:inline-block;
       padding:0 20px;
     }
@@ -23,6 +23,11 @@ header {
     z-index: -1;
     background:center center;
     object-fit: contain;
+  }
+
+  .login-register-menu a {
+    width:140px;
+    margin-left:10px;
   }
 
 }
