--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -5,9 +5,14 @@
 * 1- Color Variables
 * 2- Font Variables
 * 3- Responsive Variables
+* 4- Project Specific Variables
 */
 
-// #### Color Variables #####
+/**
+* ----------------------------
+*    Color Variables   *
+* ----------------------------
+ */
 
 $primary:#18beb1;
 $secondary:#c14474;
@@ -24,7 +29,11 @@ $news-body-color:#5b646a;
 $news-border-color:#ebebed;
 $mobile-platform-bg:#f8f9fd;
 
-// #### Font Variables #####
+/**
+* ----------------------------
+*    Font Variables   *
+* ----------------------------
+ */
 
 $base-font-family:'Roboto', sans-serif;
 $base-font-size:16px;
@@ -41,3 +50,11 @@ $small:767.98px;
 $medium:991.98px;
 $large:1199.98px;
 $x-large:1399.98px;
+
+/**
+* ----------------------------
+*    Project Specific Variables   *
+* ----------------------------
+ */
+
+$base-button-width:140px;
