FIX: Various UI Changes
- Slider image added to slider area
- Texts are shortened
- Icons replaced with SVG versions
- Android and ios icons are added

--- a/src/index.twig
+++ b/src/index.twig
@@ -33,6 +33,7 @@
             </div>
         </div>
     </div>
+    <div class="slider-image" style="background:url('./images/banner_image_1.png') no-repeat;"></div>
 </section>
 <section class="section-boxes">
     <div class="container">
@@ -52,7 +53,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 icon-boxes">
                 <div class="icon-box">
                     <div class="icon">
-                        <img src="images/5-24_acik_piyasa.png" class="img-fluid" alt="5/24 Açık Piyasa" />
+                        <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                     </div>
                     <div class="title">
                         5/24 Açık Piyasa
@@ -66,7 +67,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="icon-box">
                     <div class="icon">
-                        <img src="images/iki_yonlu_yatirim.png" class="img-fluid" alt="İki Yönlü Yatırım" />
+                        <img src="images/icon_cift_yonlu_yatirim.svg" class="img-fluid" alt="İki Yönlü Yatırım" />
                     </div>
                     <div class="title">
                         İki Yönlü Yatırım
@@ -79,7 +80,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="icon-box">
                     <div class="icon">
-                        <img src="images/icon_kaldiracli_islemler.png" class="img-fluid" alt="Kaldıraçlı İşlemler" />
+                        <img src="images/icon_kaldiracli_islemler.svg" class="img-fluid" alt="Kaldıraçlı İşlemler" />
                     </div>
                     <div class="title">
                         Kaldıraçlı İşlemler
@@ -141,13 +142,11 @@
             <div class="col-lg-3">
                 <div class="content-card">
                     <div class="header">
-                        <img class="img-fluid" src="images/icon_forex.png" />
+                        <img class="img-fluid" src="images/icon_forex.svg" />
                         <span class="card-title">Forex</span>
                     </div>
                     <div class="body">
                         Yabancı para birimlerine döviz ismi verilmektedir. İki dövizin birbirine oranına ise ‘parite’ denir. USDTRY, EURTRY veya EURUSD birer paritedirler. Dünya üzerinde en çok işlem gören döviz Amerikan Doları kısaca USD’dir. Dünya üzerinde en çok işlem gören paritelere majör pariteler denir.
-
-                        EURUSD, GBPUSD, USDJPY ve USDCHF majör paritelere örnek olarak verilebilir. Döviz çiftlerinde ilk döviz ‘baz döviz’, ikinci döviz ise ‘kota döviz’ olarak adlandırılır ve genellikle baz para birimi daha değerlidir. Örneğin USDTRY paritesinde baz döviz USD’dir veya EURUSD paritesinde baz döviz EUR’dur
                     </div>
                     <div class="footer text-center">
                         <a class="btn btn-secondary btn-block">Detay</a>
@@ -157,13 +156,11 @@
             <div class="col-lg-3">
                 <div class="content-card">
                     <div class="header">
-                        <img class="img-fluid" src="images/icon_cfd.png" />
+                        <img class="img-fluid" src="images/icon_cfd.svg" />
                         <span class="card-title">CFD</span>
                     </div>
                     <div class="body">
-                        Yabancı para birimlerine döviz ismi verilmektedir. İki dövizin birbirine oranına ise ‘parite’ denir. USDTRY, EURTRY veya EURUSD birer paritedirler. Dünya üzerinde en çok işlem gören döviz Amerikan Doları kısaca USD’dir. Dünya üzerinde en çok işlem gören paritelere majör pariteler denir.
-
-                        EURUSD, GBPUSD, USDJPY ve USDCHF majör paritelere örnek olarak verilebilir. Döviz çiftlerinde ilk döviz ‘baz döviz’, ikinci döviz ise ‘kota döviz’ olarak adlandırılır ve genellikle baz para birimi daha değerlidir. Örneğin USDTRY paritesinde baz döviz USD’dir veya EURUSD paritesinde baz döviz EUR’dur
+                        CFD, Contracts for Difference kelimelerinin kısaltmasıdır ve fark kontratları olarak Türkçe’ye çevirebileceğimiz bir finansal türev üründür.CFD’yi anlatmadan önce türev ürün kavramının üzerinde durmalıyız. Spot piyasa ürünlerine endekslenerek geliştirilen finansal ürünlere türev ürün adı verilmektedir.
                     </div>
                     <div class="footer text-center">
                         <a class="btn btn-secondary btn-block">Detay</a>
@@ -173,13 +170,11 @@
             <div class="col-lg-3">
                 <div class="content-card">
                     <div class="header">
-                        <img class="img-fluid" src="images/icon_emtia.png" />
+                        <img class="img-fluid" src="images/icon_emtia.svg" />
                         <span class="card-title">Emtia</span>
                     </div>
                     <div class="body">
-                        Yabancı para birimlerine döviz ismi verilmektedir. İki dövizin birbirine oranına ise ‘parite’ denir. USDTRY, EURTRY veya EURUSD birer paritedirler. Dünya üzerinde en çok işlem gören döviz Amerikan Doları kısaca USD’dir. Dünya üzerinde en çok işlem gören paritelere majör pariteler denir.
-
-                        EURUSD, GBPUSD, USDJPY ve USDCHF majör paritelere örnek olarak verilebilir. Döviz çiftlerinde ilk döviz ‘baz döviz’, ikinci döviz ise ‘kota döviz’ olarak adlandırılır ve genellikle baz para birimi daha değerlidir. Örneğin USDTRY paritesinde baz döviz USD’dir veya EURUSD paritesinde baz döviz EUR’dur
+                        Ekonomide, insan ihtiyaçlarını gideren fiziksel varlıklara mal daha doğrusu ekonomik mal denir. Bir ekonomi malının bir değeri vardır. Ancak bu değer farklı biçimlerde tanımlanabilir. Bazı malların değerini üretim maliyetleri belirlerken, bazı malların değerini sağladığı fayda belirler.
                     </div>
                     <div class="footer text-center">
                         <a class="btn btn-secondary btn-block">Detay</a>
@@ -189,13 +184,11 @@
             <div class="col-lg-3">
                 <div class="content-card">
                     <div class="header">
-                        <img class="img-fluid" src="images/icon_endeksler.png" />
+                        <img class="img-fluid" src="images/icon_endeksler.svg" />
                         <span class="card-title">Endeksler</span>
                     </div>
                     <div class="body">
-                        Yabancı para birimlerine döviz ismi verilmektedir. İki dövizin birbirine oranına ise ‘parite’ denir. USDTRY, EURTRY veya EURUSD birer paritedirler. Dünya üzerinde en çok işlem gören döviz Amerikan Doları kısaca USD’dir. Dünya üzerinde en çok işlem gören paritelere majör pariteler denir.
-
-                        EURUSD, GBPUSD, USDJPY ve USDCHF majör paritelere örnek olarak verilebilir. Döviz çiftlerinde ilk döviz ‘baz döviz’, ikinci döviz ise ‘kota döviz’ olarak adlandırılır ve genellikle baz para birimi daha değerlidir. Örneğin USDTRY paritesinde baz döviz USD’dir veya EURUSD paritesinde baz döviz EUR’dur
+                        CFD, Contracts for Difference kelimelerinin kısaltmasıdır. CFD, dayanak varlığın fiyat hareketlerini birebir takip eder. Böylece küresel endeks kontratlarındaki hareketleri kazanca çevirebilirsiniz.
                     </div>
                     <div class="footer text-center">
                         <a class="btn btn-secondary btn-block">Detay</a>
@@ -212,7 +205,7 @@
         <div class="row">
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                 <div class="why-carsi-fx-bg">
-                    <img src="images/Neden_CarsiFX_image.png" />
+                    <img src="images/Neden_CarsiFX.png" />
                 </div>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12">
@@ -225,6 +218,9 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. tempor  incididunt ut labore et dolore magna
                     </p>
+
+                    <a class="btn btn-info btn-why-us">Detay</a>
+
                 </div>
 
             </div>
@@ -277,7 +273,7 @@
                         <span class="publish-date">14 November 2019 </span>
                         <a class="news-link">
                             Detay
-                            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            <i data-feather="arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -293,7 +289,7 @@
                         <span class="publish-date">14 November 2019 </span>
                         <a class="news-link">
                             Detay
-                            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            <i data-feather="arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -311,7 +307,7 @@
                         <span class="publish-date">14 November 2019 </span>
                         <a class="news-link">
                             Detay
-                            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            <i data-feather="arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -327,7 +323,7 @@
                         <span class="publish-date">14 November 2019 </span>
                         <a class="news-link">
                             Detay
-                            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            <i data-feather="arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -414,7 +410,7 @@
 
                 <div class="mobile-platform-box box-gray">
                     <a class="platform-icon">
-                        PLATFORM ICON
+                        <i class="fa fa-android"></i>
                     </a>
                     <a class="platform-name">
                         Android
@@ -425,7 +421,7 @@
 
                 <div class="mobile-platform-box">
                     <a class="platform-icon">
-                        PLATFORM ICON
+                        <i class="fa fa-apple"></i>
                     </a>
                     <a class="platform-name">
                         İOS
