ADD: New Components
Register steps and icon box components are added

--- a/src/styles/components/_components.scss
+++ b/src/styles/components/_components.scss
@@ -1,3 +1,10 @@
+/**
+* ----------------------------
+*    Components
+* ----------------------------
+ */
+
 @import "./header";
 @import "./footer";
-@import "register-steps";
+@import "./register-steps";
+@import "./icon-box";
