--- a/src/styles/components/_register-steps.scss
+++ b/src/styles/components/_register-steps.scss
@@ -1,12 +1,22 @@
 .section-register-steps {
   margin:170px 0;
 
+  @media screen and (max-width:$x-small) {
+    margin:120px 0;
+  }
+
   .steps-container {
 
     display:flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
+
+    @media screen and (max-width:$x-small) {
+      display:block;
+    }
+
+    // 0537 218 05 13 - Veysel<
 
     .step-1 {
       position: relative;
@@ -18,6 +28,11 @@
         background-image: linear-gradient(to left, #5168f2, #69d694);
         top: 74px;
         left: 195px;
+
+        @media screen and (max-width:$x-small) {
+          display: none;
+        }
+
       }
     }
 
@@ -31,6 +46,11 @@
         background-image: linear-gradient(to left, #e76a96, #5168f2);
         top: 74px;
         left: 195px;
+
+        @media screen and (max-width:$x-small) {
+          display: none;
+        }
+
       }
     }
 
@@ -39,6 +59,10 @@
       text-align: center;
       width:25%;
       padding:20px;
+
+      @media screen and (max-width:$x-small) {
+        width: 100%;
+      }
 
       .step-outer.step-bg-primary {
         background: lighten($primary, 50%);
