--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -48,8 +48,10 @@ $base-line-height:1.5px;
 $x-small:575.98px;
 $small:767.98px;
 $medium:991.98px;
-$large:1199.98px;
-$x-large:1399.98px;
+$large:1280px;
+$x-large:1490px;
+$xx-large:1920px;
+$xxx-large:2560px;
 
 /**
 * ----------------------------
