ADD: Responsive Styles
Responsive styles for footer component are added

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -10,9 +10,11 @@ footer {
       display:flex;
       flex-direction: row;
       flex-wrap: nowrap;
-
       border-bottom: 1px solid #828998;
 
+      @media screen and(max-width: $x-small) {
+        display: block;
+      }
 
       .footer-block.img-block {
         width:30%;
@@ -21,6 +23,15 @@ footer {
         height:170px;
         border-right:1px solid $footer-link-color;
        // margin-left:-50px;
+
+        @media screen and(max-width: $x-small) {
+          width: 100%;
+          text-align: center;
+          border-right:unset;
+          border-bottom:1px solid $footer-link-color ;
+          margin-bottom: 20px;
+        }
+
       }
 
       .footer-block {
@@ -40,6 +51,11 @@ footer {
           background: $primary;
           display:block;
           margin-bottom: 10px;
+
+          @media screen and(max-width: $x-small) {
+            width:100%;
+          }
+
         }
 
         .links {
@@ -49,6 +65,12 @@ footer {
         &:last-child {
           padding-right: 0;
           margin-right: -60px;
+        }
+
+        @media screen and(max-width: $x-small) {
+          display: block;
+          text-align: center;
+          width:100%;
         }
 
       }
@@ -68,11 +90,33 @@ footer {
   }
 
   .bar {
+    position: relative;
     background:$primary;
+    z-index: -1;
     height:87px;
+    width:100%;
+
+    .container {
+      position: relative;
+    }
+
+    .carsifx-mobile-img {
+      position: absolute;
+      z-index: 1;
+      bottom: -370px;
+      // left: 550px;
+      right:0;
+
+      @media screen and (max-width:$x-small) {
+        display:none;
+      }
+
+    }
   }
 
   .footer-bottom {
+    position: relative;
+    z-index: 1;
     padding:20px;
     background: $footer-bottom;
 
@@ -105,14 +149,26 @@ footer {
         font-size:18px;
         color:$primary;
       }
+
+      @media screen and (max-width:$x-small) {
+        margin:30px 0;
+      }
+
     }
 
     .social-links {
+      text-align: right;
       a {
         display:inline-block;
         padding:0 20px;
         font-size:25px;
       }
+
+      @media screen and (max-width:$x-small) {
+        text-align: center;
+        margin:30px 0;
+      }
+
     }
 
   }
