--- a/src/layouts/header.twig
+++ b/src/layouts/header.twig
@@ -3,22 +3,20 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-2">
+            <div class="col-lg-2 col-xs-6">
                 <div class="logo">
                     <a href="index.html">
                         <img src="images/carsi_logo.png"
-                             srcset="images/carsi_logo@2x.png 2x,
-                                    images/carsi_logo@3x.png 3x"
                              class="img-fluid   "  alt="Çarşı FX Logo"/>
                     </a>
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-6 col-xs-6">
                 <div class="main-menu">
                     <nav role="navigation">
                         <a href="javascript:;">Özellikler</a>
-                        <a href="javascript:;">Platform</a>
+                        <a href="platforms.html">Platform</a>
                         <a href="javascript:;">Analiz</a>
                         <a href="javascript:;">Şirket</a>
                         <a href="javascript:;">Duyurular</a>
