ADD: Platforms Page Markup
Remaining markup is added

--- a/src/platforms.twig
+++ b/src/platforms.twig
@@ -32,7 +32,7 @@
             <div class="row platform-block">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="platform-content-image">
-                        PLATFORM IMAGE
+                        <img src="images/platform_metatrader4.png" class="img-fluid" />
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="platform-content-image">
-                        PLATFORM IMAGE
+                        <img src="images/platform_metatrader5.png" class="img-fluid" />
                     </div>
 
                 </div>
@@ -211,7 +211,47 @@
         <div class="container">
             <div class="row">
 
-                <div class=""></div>
+                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                    <div class="account-image">
+                        <img src="images/platform_account_image.png" class="img-fluid" />
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+
+                    <div class="section-title">
+                        <h2>Ücretsiz Üye Olun</h2>
+                    </div>
+
+                    <div class="account-form">
+
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <input type="text" class="form-control input-custom" id="inputEmail4" placeholder="İsim"  />
+                            </div>
+                            <div class="form-group col-md-6">
+                                <input type="password" class="form-control input-custom" placeholder="Soyisim" />
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <input type="text" class="form-control input-custom" placeholder="Telefon"  />
+                            </div>
+                            <div class="form-group col-md-6">
+                                <input type="password" class="form-control input-custom" placeholder="Eposta" />
+                            </div>
+                        </div>
+
+                        <div class="form-row mt-3" >
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="btn btn-primary btn-submit">Kayıt Ol</button>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
 
             </div>
         </div>
