FIX: Slider Image Fix
Percentage based positioning wasn't working properly
when slider text's height change. Replaced percentage with px and now it's working properly.

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -234,7 +234,7 @@
 @media only screen and(max-width: $xxx-large) {
   .content-slider {
     .slider-image {
-      top: -80%;
+      top: -220px;
       right: 0;
     }
   }
