ADD: Title Component Width
Added 70% width to section title to provide better readability on section title

--- a/src/styles/pages/_platforms.scss
+++ b/src/styles/pages/_platforms.scss
@@ -17,6 +17,13 @@
 
 }
 
+.page-platform-features {
+  .section-title {
+    width:70%;
+    margin:0 auto;
+  }
+}
+
 .page-platforms-account-block {
   margin-top:100px;
 
