ADD: Color variables
More color variables are added

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -61,3 +61,7 @@ $xxx-large:2560px;
 
 $base-button-width:140px;
 $form-input-bg:#e5e8e8;
+
+$investment-increase-value:#18be9e;
+$investment-decrease-value:#ff4040;
+$investment-normal-value:#3e3b44;
