ADD: Account Page Card Variables
Card style variables are added

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -65,3 +65,10 @@ $form-input-bg:#e5e8e8;
 $investment-increase-value:#18be9e;
 $investment-decrease-value:#ff4040;
 $investment-normal-value:#3e3b44;
+
+$account-card-primary:$primary;
+$account-card-premium:$info;
+$account-card-vip:#24282b;
+$account-card-body:#f5f5f5;
+$account-card-border:#eaeaeb;
+$account-card-body-text:#5b646a;
