--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -72,3 +72,6 @@ $account-card-vip:#24282b;
 $account-card-body:#f5f5f5;
 $account-card-border:#eaeaeb;
 $account-card-body-text:#5b646a;
+
+$contact-form-label-color:#333e63;
+$contact-form-placeholder-color:#777e97;
