ADD: Footer scripts added
Footer scripts added to base layout

--- a/src/layouts/base.twig
+++ b/src/layouts/base.twig
@@ -14,5 +14,10 @@
 
 {% block page_content %} {% endblock %}
 
+
+<!-- footer scripts -->
+    {% include "./footer_scripts.twig" %}
+<!-- end footer scripts -->
+
 </body>
 </html>
