FIX: Responsive Fixes
Responsive fixes for each component to provide better layout in mobile

--- a/src/styles/components/_custom-tabs.scss
+++ b/src/styles/components/_custom-tabs.scss
@@ -19,3 +19,33 @@
     font-weight: bold !important;;
   }
 }
+
+@media only screen and (max-width: $x-small) {
+  .custom-tabs-container {
+    a.nav-link { font-size: 12px !important; padding:0; }
+  }
+}
+
+@media only screen and (max-width: $x-small) {
+  .custom-tabs-container {
+    a.nav-link { font-size: 12px !important; padding:0; }
+  }
+}
+
+@media only screen and (max-width: $x-small) {
+  .custom-tabs-container {
+    a.nav-link { font-size: 12px !important; padding:0; }
+  }
+}
+
+@media only screen and (max-width: $x-small) {
+  .custom-tabs-container {
+    a.nav-link { font-size: 12px !important; padding:0; }
+  }
+}
+
+@media only screen and (max-width: $x-small) {
+  .custom-tabs-container {
+    a.nav-link { font-size: 12px !important; padding:0; }
+  }
+}
