--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,9 +1,9 @@
 header {
-  position:relative;
   font-family:$base-font-family;
   padding:30px 20px;
   .main-menu {
     margin-left:235px;
+    margin-top:5px;
     a {
       color:$header-nav-color;
       font-family: $base-font-family;
@@ -28,11 +28,90 @@ header {
   .login-register-menu a {
     width:140px;
     margin-left:10px;
-    margin-bottom: 10px;
-    &:last-child {
-      margin-bottom: 0;
+  }
+
+}
+
+header.header-sticky {
+  background: #fff;
+  position: fixed;
+  width: 100%;
+  top:0;
+  z-index: 1;
+  box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.1);
+
+  .login-register-menu a {
+    &:first-child {
+      border:1px solid $primary;
+      color:$primary;
     }
   }
+
+}
+
+.mobile-header {
+  display:none;
+  padding:20px;
+  box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.1);
+  background:#fff;
+  position: fixed;
+  width:100%;
+  z-index: 1;
+
+  .menu-toggle a, .home a {
+    color:#000;
+  }
+
+  .menu-toggle, .home {
+    width:23.666666%;
+  }
+
+  .logo { width:50%; text-align: center; }
+
+  .menu-toggle, .logo, .home {
+    display:inline-block;
+  }
+
+  .home { text-align: right }
+
+}
+
+.mobile-menu {
+  display: none;
+  position: fixed;
+  background: rgba(255, 255, 255, .9);
+  width: 100%;
+  height:100%;
+  z-index: 1;
+  padding:20px;
+
+  nav  {
+    margin-top: 60px;
+    a {
+      display: block;
+      text-align: left;
+      margin:20px;
+      color:#000;
+    }
+  }
+
+  .menu-close {
+
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 15px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border:1px solid $primary;
+    text-align: center;
+    padding-top: 3px;
+    color:$primary;
+  }
+
+  a.btn-outline-primary { color:$primary; width: 40%; }
+  a.btn-primary { color:#fff; width: 40%; }
 
 }
 
@@ -53,6 +132,7 @@ header {
 
     }
   }
+
 }
 
 @media only screen and(max-width: $xx-large) {
@@ -62,6 +142,7 @@ header {
       margin-left: 30px;
     }
   }
+
 }
 
 @media only screen and(max-width: $x-large) {
@@ -70,6 +151,7 @@ header {
 
     }
   }
+
 }
 
 @media only screen and(max-width: $large) {
@@ -81,13 +163,13 @@ header {
       }
     }
   }
+
 }
 
 @media only screen and (max-width: $x-small) {
+  .mobile-header { display: block; }
   header {
-    .login-register-menu {
-      margin-top: -30px;
-    }
-    .main-menu { display:none; }
+    display:none !important;
   }
+
 }
